[gd_scene load_steps=13 format=3 uid="uid://cxwdrbb3xtufd"]

[ext_resource type="Script" uid="uid://bs8vcmdv5pulq" path="res://Scripts/item_pillar.gd" id="1_vgr4q"]
[ext_resource type="ArrayMesh" uid="uid://bsrdgmt2fu12q" path="res://assets/mirror.res" id="2_c6fn0"]
[ext_resource type="PackedScene" uid="uid://d25mnqq71uc2" path="res://Scenes/light_beam.tscn" id="2_rvk7v"]
[ext_resource type="PackedScene" uid="uid://dlqhot88db272" path="res://models/itempillar.glb" id="3_rvk7v"]
[ext_resource type="ArrayMesh" uid="uid://bf41p27w502pv" path="res://assets/ramp-gem-blue_Cylinder.res" id="5_j0mi4"]
[ext_resource type="ArrayMesh" uid="uid://bg0mfdlq2cq8c" path="res://assets/ramp-gem-green_Cylinder.res" id="6_0qpj1"]
[ext_resource type="ArrayMesh" uid="uid://g8tn2n1q21rh" path="res://assets/ramp-gem-red_Cylinder.res" id="6_ryna0"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_w8duk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6o5a1"]
height = 3.0

[sub_resource type="TorusMesh" id="TorusMesh_vgr4q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kpjcp"]

[sub_resource type="TextMesh" id="TextMesh_vgr4q"]
material = SubResource("StandardMaterial3D_kpjcp")
text = "Hot Cold"

[node name="ItemPillar" type="Node3D"]
script = ExtResource("1_vgr4q")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("CylinderShape3D_w8duk")

[node name="Interact Collision" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interact Collision"]
shape = SubResource("CylinderShape3D_6o5a1")

[node name="Mirror" type="Node3D" parent="."]
visible = false

[node name="Mirror Mesh" type="MeshInstance3D" parent="Mirror"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0)

[node name="LightBeam" parent="Mirror/Mirror Mesh" instance=ExtResource("2_rvk7v")]
unique_name_in_owner = true
transform = Transform3D(-1, 7.64274e-15, -8.74228e-09, -8.74228e-08, -4.37114e-08, 0.1, 3.82137e-15, 1, 4.37114e-09, 0, 0, 0)

[node name="MirrorRealMesh" type="MeshInstance3D" parent="Mirror"]
transform = Transform3D(-0.353553, 0, -0.353553, 0, 0.5, 0, 0.353553, 0, -0.353553, 0, 1.4, 0)
mesh = ExtResource("2_c6fn0")

[node name="Boulder Loot" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 0, 1.357, 0)
visible = false
mesh = SubResource("TorusMesh_vgr4q")
skeleton = NodePath("")

[node name="HotCold" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
visible = false
mesh = SubResource("TextMesh_vgr4q")
skeleton = NodePath("")

[node name="itempillar" parent="." instance=ExtResource("3_rvk7v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="BlueGem" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
visible = false
mesh = ExtResource("5_j0mi4")

[node name="RedGem" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.2, 0)
visible = false
mesh = ExtResource("6_ryna0")

[node name="GreenGem" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
visible = false
mesh = ExtResource("6_0qpj1")
